# TerraLens

./: CHANGELOG.md  README.md  contributing.md  pyproject.toml
.github/workflows/: release.yml
src/insight_tf/: __init__.py  app.py  blueprints.py  catalog.py  cli.py  state.py
tests/: conftest.py  test_catalog.py  test_state.py  test_templates.py
